--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/composition-api": "^1.4.9",
     "@vueuse/core": "^8.0.0",
     "core-js": "^3.21.1",
+    "element-ui": "^2.15.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
