--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@vueuse/core": "^8.0.0",
     "core-js": "^3.21.1",
     "element-ui": "^2.15.6",
+    "lodash": "^4.17.21",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
+    "@iconify-icons/bx": "^1.2.3",
+    "@iconify-icons/dashicons": "^1.2.2",
     "@iconify/json": "^2.1.14",
+    "@iconify/vue2": "^1.2.1",
+    "@types/lodash": "^4.14.181",
     "@vue/runtime-dom": "^3.2.31",
     "eslint": "^8.10.0",
     "husky": "^7.0.4",
