--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.15.6",
     "gesto": "^1.7.0",
     "lodash": "^4.17.21",
+    "vcolorpicker": "^1.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
