--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "vcolorpicker": "^1.1.0",
     "vue": "^2.6.14",
+    "vue-right-click-menu": "^1.1.1",
     "vue-router": "^3.5.3",
     "vuedraggable": "^2.24.3"
   },
