--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "unplugin-auto-import": "^0.6.4",
     "unplugin-icons": "^0.13.3",
     "unplugin-vue-components": "^0.18.0",
+    "unplugin-vue-define-options": "^0.6.1",
     "unplugin-vue2-script-setup": "^0.10.0",
     "vite": "^2.8.6",
     "vite-plugin-vue2": "^1.9.3",
