--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gesto": "^1.7.0",
     "lodash": "^4.17.21",
     "vcolorpicker": "^1.1.0",
+    "vee-validate": "3.4.14",
     "vue": "^2.6.14",
     "vue-right-click-menu": "^1.1.1",
     "vue-router": "^3.5.4",
