--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
     "@scena/guides": "^0.18.1",
     "@vue/composition-api": "^1.4.9",
     "@vueuse/core": "^8.0.0",
+    "@vueuse/integrations": "^8.6.0",
+    "axios": "^0.27.2",
     "core-js": "^3.21.1",
+    "dayjs": "^1.11.3",
     "element-ui": "^2.15.6",
     "gesto": "^1.7.0",
     "lodash": "^4.17.21",
+    "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2",
     "vcolorpicker": "^1.1.0",
     "vee-validate": "3.4.14",
     "vue": "^2.6.14",
+    "vue-fullscreen": "^2.6.1",
     "vue-right-click-menu": "^1.1.1",
     "vue-router": "^3.5.4",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
